tests/snapshots/snapshot_tests__complex_types.snap
---
source: tests/snapshot_tests.rs
expression: program
---
Program {
    statements: [
        Function {
            attributes: [],
            name: Token {
                kind: Identifier,
                span: Span {
                    start: 19,
                    end: 23,
                },
            },
            by_ref: false,
            params: [
                Param {
                    attributes: [],
                    modifiers: [],
                    name: Token {
                        kind: Variable,
                        span: Span {
                            start: 35,
                            end: 37,
                        },
                    },
                    ty: Some(
                        Union(
                            [
                                Simple(
                                    Token {
                                        kind: TypeInt,
                                        span: Span {
                                            start: 24,
                                            end: 27,
                                        },
                                    },
                                ),
                                Simple(
                                    Token {
                                        kind: TypeString,
                                        span: Span {
                                            start: 28,
                                            end: 34,
                                        },
                                    },
                                ),
                            ],
                        ),
                    ),
                    default: None,
                    by_ref: false,
                    variadic: false,
                    hooks: None,
                    span: Span {
                        start: 24,
                        end: 37,
                    },
                },
                Param {
                    attributes: [],
                    modifiers: [],
                    name: Token {
                        kind: Variable,
                        span: Span {
                            start: 47,
                            end: 49,
                        },
                    },
                    ty: Some(
                        Intersection(
                            [
                                Name(
                                    Name {
                                        parts: [
                                            Token {
                                                kind: Identifier,
                                                span: Span {
                                                    start: 39,
                                                    end: 42,
                                                },
                                            },
                                        ],
                                        span: Span {
                                            start: 39,
                                            end: 42,
                                        },
                                    },
                                ),
                                Name(
                                    Name {
                                        parts: [
                                            Token {
                                                kind: Identifier,
                                                span: Span {
                                                    start: 43,
                                                    end: 46,
                                                },
                                            },
                                        ],
                                        span: Span {
                                            start: 43,
                                            end: 46,
                                        },
                                    },
                                ),
                            ],
                        ),
                    ),
                    default: None,
                    by_ref: false,
                    variadic: false,
                    hooks: None,
                    span: Span {
                        start: 39,
                        end: 49,
                    },
                },
                Param {
                    attributes: [],
                    modifiers: [],
                    name: Token {
                        kind: Variable,
                        span: Span {
                            start: 59,
                            end: 61,
                        },
                    },
                    ty: Some(
                        Union(
                            [
                                Intersection(
                                    [
                                        Name(
                                            Name {
                                                parts: [
                                                    Token {
                                                        kind: Identifier,
                                                        span: Span {
                                                            start: 52,
                                                            end: 53,
                                                        },
                                                    },
                                                ],
                                                span: Span {
                                                    start: 52,
                                                    end: 53,
                                                },
                                            },
                                        ),
                                        Name(
                                            Name {
                                                parts: [
                                                    Token {
                                                        kind: Identifier,
                                                        span: Span {
                                                            start: 54,
                                                            end: 55,
                                                        },
                                                    },
                                                ],
                                                span: Span {
                                                    start: 54,
                                                    end: 55,
                                                },
                                            },
                                        ),
                                    ],
                                ),
                                Name(
                                    Name {
                                        parts: [
                                            Token {
                                                kind: Identifier,
                                                span: Span {
                                                    start: 57,
                                                    end: 58,
                                                },
                                            },
                                        ],
                                        span: Span {
                                            start: 57,
                                            end: 58,
                                        },
                                    },
                                ),
                            ],
                        ),
                    ),
                    default: None,
                    by_ref: false,
                    variadic: false,
                    hooks: None,
                    span: Span {
                        start: 51,
                        end: 61,
                    },
                },
            ],
            return_type: Some(
                Nullable(
                    Simple(
                        Token {
                            kind: TypeFloat,
                            span: Span {
                                start: 65,
                                end: 70,
                            },
                        },
                    ),
                ),
            ),
            body: [
                Return {
                    expr: Some(
                        Null {
                            span: Span {
                                start: 88,
                                end: 92,
                            },
                        },
                    ),
                    span: Span {
                        start: 81,
                        end: 99,
                    },
                },
            ],
            doc_comment: None,
            span: Span {
                start: 10,
                end: 104,
            },
        },
    ],
    errors: [],
    span: Span {
        start: 10,
        end: 104,
    },
}
