tests/snapshots/snapshot_tests__constructor_property_promotion.snap
---
source: tests/snapshot_tests.rs
expression: program
---
Program {
    statements: [
        Class {
            attributes: [],
            modifiers: [],
            name: Token {
                kind: Identifier,
                span: Span {
                    start: 16,
                    end: 20,
                },
            },
            extends: None,
            implements: [],
            members: [
                Method {
                    attributes: [],
                    modifiers: [
                        Token {
                            kind: Public,
                            span: Span {
                                start: 31,
                                end: 37,
                            },
                        },
                    ],
                    name: Token {
                        kind: Identifier,
                        span: Span {
                            start: 47,
                            end: 58,
                        },
                    },
                    params: [
                        Param {
                            attributes: [],
                            modifiers: [
                                Token {
                                    kind: Public,
                                    span: Span {
                                        start: 72,
                                        end: 78,
                                    },
                                },
                            ],
                            name: Token {
                                kind: Variable,
                                span: Span {
                                    start: 86,
                                    end: 91,
                                },
                            },
                            ty: Some(
                                Simple(
                                    Token {
                                        kind: TypeString,
                                        span: Span {
                                            start: 79,
                                            end: 85,
                                        },
                                    },
                                ),
                            ),
                            default: None,
                            by_ref: false,
                            variadic: false,
                            hooks: None,
                            span: Span {
                                start: 72,
                                end: 91,
                            },
                        },
                        Param {
                            attributes: [],
                            modifiers: [
                                Token {
                                    kind: Private,
                                    span: Span {
                                        start: 105,
                                        end: 112,
                                    },
                                },
                            ],
                            name: Token {
                                kind: Variable,
                                span: Span {
                                    start: 117,
                                    end: 121,
                                },
                            },
                            ty: Some(
                                Simple(
                                    Token {
                                        kind: TypeInt,
                                        span: Span {
                                            start: 113,
                                            end: 116,
                                        },
                                    },
                                ),
                            ),
                            default: Some(
                                Integer {
                                    value: [
                                        48,
                                    ],
                                    span: Span {
                                        start: 124,
                                        end: 125,
                                    },
                                },
                            ),
                            by_ref: false,
                            variadic: false,
                            hooks: None,
                            span: Span {
                                start: 105,
                                end: 125,
                            },
                        },
                        Param {
                            attributes: [],
                            modifiers: [
                                Token {
                                    kind: Protected,
                                    span: Span {
                                        start: 139,
                                        end: 148,
                                    },
                                },
                                Token {
                                    kind: Readonly,
                                    span: Span {
                                        start: 149,
                                        end: 157,
                                    },
                                },
                            ],
                            name: Token {
                                kind: Variable,
                                span: Span {
                                    start: 164,
                                    end: 170,
                                },
                            },
                            ty: Some(
                                Simple(
                                    Token {
                                        kind: TypeFloat,
                                        span: Span {
                                            start: 158,
                                            end: 163,
                                        },
                                    },
                                ),
                            ),
                            default: None,
                            by_ref: false,
                            variadic: false,
                            hooks: None,
                            span: Span {
                                start: 139,
                                end: 170,
                            },
                        },
                    ],
                    return_type: None,
                    body: [],
                    doc_comment: None,
                    span: Span {
                        start: 31,
                        end: 190,
                    },
                },
            ],
            doc_comment: None,
            span: Span {
                start: 10,
                end: 195,
            },
        },
    ],
    errors: [],
    span: Span {
        start: 10,
        end: 195,
    },
}
