tests/snapshots/snapshot_tests__control_flow_extras.snap
---
source: tests/snapshot_tests.rs
expression: program
---
Program {
    statements: [
        While {
            condition: Error {
                span: Span {
                    start: 17,
                    end: 21,
                },
            },
            body: [
                Break {
                    level: None,
                    span: Span {
                        start: 33,
                        end: 53,
                    },
                },
                Break {
                    level: Some(
                        Integer {
                            value: [
                                50,
                            ],
                            span: Span {
                                start: 54,
                                end: 55,
                            },
                        },
                    ),
                    span: Span {
                        start: 48,
                        end: 73,
                    },
                },
                Continue {
                    level: None,
                    span: Span {
                        start: 65,
                        end: 91,
                    },
                },
                Continue {
                    level: Some(
                        Integer {
                            value: [
                                50,
                            ],
                            span: Span {
                                start: 92,
                                end: 93,
                            },
                        },
                    ),
                    span: Span {
                        start: 83,
                        end: 100,
                    },
                },
            ],
            span: Span {
                start: 10,
                end: 111,
            },
        },
        Global {
            vars: [
                Variable {
                    name: Span {
                        start: 112,
                        end: 114,
                    },
                    span: Span {
                        start: 112,
                        end: 114,
                    },
                },
                Variable {
                    name: Span {
                        start: 116,
                        end: 118,
                    },
                    span: Span {
                        start: 116,
                        end: 118,
                    },
                },
            ],
            span: Span {
                start: 105,
                end: 130,
            },
        },
        Static {
            vars: [
                StaticVar {
                    var: Assign {
                        var: Variable {
                            name: Span {
                                start: 131,
                                end: 133,
                            },
                            span: Span {
                                start: 131,
                                end: 133,
                            },
                        },
                        expr: Integer {
                            value: [
                                49,
                            ],
                            span: Span {
                                start: 136,
                                end: 137,
                            },
                        },
                        span: Span {
                            start: 131,
                            end: 137,
                        },
                    },
                    default: None,
                    span: Span {
                        start: 131,
                        end: 137,
                    },
                },
                StaticVar {
                    var: Variable {
                        name: Span {
                            start: 139,
                            end: 141,
                        },
                        span: Span {
                            start: 139,
                            end: 141,
                        },
                    },
                    default: None,
                    span: Span {
                        start: 139,
                        end: 141,
                    },
                },
            ],
            span: Span {
                start: 124,
                end: 152,
            },
        },
        Unset {
            vars: [
                Variable {
                    name: Span {
                        start: 153,
                        end: 155,
                    },
                    span: Span {
                        start: 153,
                        end: 155,
                    },
                },
                Variable {
                    name: Span {
                        start: 157,
                        end: 159,
                    },
                    span: Span {
                        start: 157,
                        end: 159,
                    },
                },
            ],
            span: Span {
                start: 147,
                end: 166,
            },
        },
    ],
    span: Span {
        start: 0,
        end: 0,
    },
}
