tests/snapshots/snapshot_tests__control_structures.snap
---
source: tests/snapshot_tests.rs
expression: program
---
Program {
    statements: [
        If {
            condition: Binary {
                left: Variable {
                    name: Span {
                        start: 15,
                        end: 17,
                    },
                    span: Span {
                        start: 15,
                        end: 17,
                    },
                },
                op: Gt,
                right: Integer {
                    value: [
                        48,
                    ],
                    span: Span {
                        start: 20,
                        end: 21,
                    },
                },
                span: Span {
                    start: 15,
                    end: 21,
                },
            },
            then_block: [
                Echo {
                    exprs: [
                        String {
                            value: [
                                39,
                                112,
                                111,
                                115,
                                105,
                                116,
                                105,
                                118,
                                101,
                                39,
                            ],
                            span: Span {
                                start: 38,
                                end: 48,
                            },
                        },
                    ],
                    span: Span {
                        start: 33,
                        end: 55,
                    },
                },
            ],
            else_block: Some(
                [
                    Echo {
                        exprs: [
                            String {
                                value: [
                                    39,
                                    110,
                                    101,
                                    103,
                                    97,
                                    116,
                                    105,
                                    118,
                                    101,
                                    39,
                                ],
                                span: Span {
                                    start: 76,
                                    end: 86,
                                },
                            },
                        ],
                        span: Span {
                            start: 71,
                            end: 93,
                        },
                    },
                ],
            ),
            span: Span {
                start: 11,
                end: 108,
            },
        },
        While {
            condition: Binary {
                left: Variable {
                    name: Span {
                        start: 110,
                        end: 112,
                    },
                    span: Span {
                        start: 110,
                        end: 112,
                    },
                },
                op: Lt,
                right: Integer {
                    value: [
                        49,
                        48,
                    ],
                    span: Span {
                        start: 115,
                        end: 117,
                    },
                },
                span: Span {
                    start: 110,
                    end: 117,
                },
            },
            body: [
                Expression {
                    expr: Assign {
                        var: Variable {
                            name: Span {
                                start: 129,
                                end: 131,
                            },
                            span: Span {
                                start: 129,
                                end: 131,
                            },
                        },
                        expr: Binary {
                            left: Variable {
                                name: Span {
                                    start: 134,
                                    end: 136,
                                },
                                span: Span {
                                    start: 134,
                                    end: 136,
                                },
                            },
                            op: Plus,
                            right: Integer {
                                value: [
                                    49,
                                ],
                                span: Span {
                                    start: 139,
                                    end: 140,
                                },
                            },
                            span: Span {
                                start: 134,
                                end: 140,
                            },
                        },
                        span: Span {
                            start: 129,
                            end: 140,
                        },
                    },
                    span: Span {
                        start: 129,
                        end: 147,
                    },
                },
            ],
            span: Span {
                start: 103,
                end: 163,
            },
        },
        Return {
            expr: Some(
                Integer {
                    value: [
                        48,
                    ],
                    span: Span {
                        start: 164,
                        end: 165,
                    },
                },
            ),
            span: Span {
                start: 157,
                end: 171,
            },
        },
    ],
    errors: [],
    span: Span {
        start: 11,
        end: 171,
    },
}
