tests/snapshots/snapshot_tests__foreach.snap
---
source: tests/snapshot_tests.rs
expression: program
---
Program {
    statements: [
        Foreach {
            expr: Variable {
                name: Span {
                    start: 19,
                    end: 23,
                },
                span: Span {
                    start: 19,
                    end: 23,
                },
            },
            key_var: None,
            value_var: Variable {
                name: Span {
                    start: 27,
                    end: 33,
                },
                span: Span {
                    start: 27,
                    end: 33,
                },
            },
            body: [
                Echo {
                    exprs: [
                        Variable {
                            name: Span {
                                start: 50,
                                end: 56,
                            },
                            span: Span {
                                start: 50,
                                end: 56,
                            },
                        },
                    ],
                    span: Span {
                        start: 45,
                        end: 63,
                    },
                },
            ],
            span: Span {
                start: 10,
                end: 75,
            },
        },
        Foreach {
            expr: Variable {
                name: Span {
                    start: 77,
                    end: 81,
                },
                span: Span {
                    start: 77,
                    end: 81,
                },
            },
            key_var: Some(
                Variable {
                    name: Span {
                        start: 85,
                        end: 89,
                    },
                    span: Span {
                        start: 85,
                        end: 89,
                    },
                },
            ),
            value_var: Variable {
                name: Span {
                    start: 93,
                    end: 99,
                },
                span: Span {
                    start: 93,
                    end: 99,
                },
            },
            body: [
                Echo {
                    exprs: [
                        Variable {
                            name: Span {
                                start: 116,
                                end: 120,
                            },
                            span: Span {
                                start: 116,
                                end: 120,
                            },
                        },
                    ],
                    span: Span {
                        start: 111,
                        end: 134,
                    },
                },
                Echo {
                    exprs: [
                        Variable {
                            name: Span {
                                start: 135,
                                end: 141,
                            },
                            span: Span {
                                start: 135,
                                end: 141,
                            },
                        },
                    ],
                    span: Span {
                        start: 130,
                        end: 148,
                    },
                },
            ],
            span: Span {
                start: 68,
                end: 153,
            },
        },
    ],
    errors: [],
    span: Span {
        start: 10,
        end: 153,
    },
}
